--- a/challenge-day2/frontend/.env
+++ b/challenge-day2/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=http://54.167.235.140:5000/api
+VITE_API_BASE_URL=http://acc16284e7f5f402189e4b8c146f5178-870784617.us-east-1.elb.amazonaws.com:5000/api
