--- a/challenge-day2/frontend/cloudmart-frontend.yaml
+++ b/challenge-day2/frontend/cloudmart-frontend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-frontend-app
-        image: public.ecr.aws/d6t2e6r8/cloudmaster-frontend
+        image: CONTAINER_IMAGE
 ---
 
 apiVersion: v1
