--- a/challenge-day2/backend/cloudmart-backend.yaml
+++ b/challenge-day2/backend/cloudmart-backend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-backend-app
-        image: public.ecr.aws/d6t2e6r8/cloudmaster-backend
+        image: CONTAINER_IMAGE
         env:
         - name: PORT
           value: "5000"
